app.css
body {
    font-family: 'Lucida Sans', sans-serif;
    background-color: #d8d6f8;
    display: flex;
    flex-direction: column;
    margin: 0;
    min-height: 100vh;
}

header {
    display: flex;
    background-color: rgba(31, 41, 55, 0.9);
    height: 50px;
    color: #fff;
    justify-content:space-between;
    align-items: center;
    margin-bottom: auto;
    text-transform: uppercase;
    padding: 20px;    
}

h1{
  flex: 1;
  text-align: center;
}

#dark-mode {
    border-radius: 20px;
    height: auto;
    font-size: 1.1rem;
    padding: 5px;
    border: 2px solid #deebf7d2;
    /* text-align: end; */
}

#dark-mode .sun-icon .moon-icon {
    display: inline;
  }

.calculator {
    display: flex;
    flex-direction: column;
    min-width: 445px;
    max-width: 600px;    
    margin: 0 auto;
    padding: 10px 15px;
    border-top: 2px ridge #8dc3f7d2;
    border-left: 2px ridge #8dc3f7d2;
    border-radius: 20px;
    background-color: rgba(248, 249, 255, 0.75);
    transform: scale(0.8);
    box-shadow: 4px 4px 6px #011d79de;
}

.display {
    grid-column: span 4;
    height: 100px;
    color: #fff;
    font-size: 2rem;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    padding: 0 20px;
    margin-bottom: 5px;
    border-radius: 20px;
    border-top: 2px ridge #8dc3f7d2;
    border-left: 2px ridge #8dc3f7d2;
    border-right: 3px groove #011d79de;
    border-bottom: 3px groove #011d79de;
    background-color: rgba(31, 41, 55, 0.9);
}

.calculator-key-grid {
    display: grid;
    justify-content: center;
    align-content: center;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: minmax(80px, 100px) repeat(4, 100px);
    gap: 5px;
}

.button {
    font-size: 2rem;
    font-weight: bold;
    border-top: 2px ridge #8dc3f7d2;
    border-left: 2px ridge #8dc3f7d2;
    border-right: 3px groove #011d79de;
    border-bottom: 3px groove #011d79de;
    border-radius: 20px;
    outline: none;
    background-color: rgba(255, 255, 255, 0.87);
    cursor: pointer;
}

button:hover {
    background-color: rgba(255, 255, 255, 0.979);
    transform: scale(0.95);
  }

.button.clear {
    grid-column: span 2;
    background-image: linear-gradient(to bottom, #1083e0, #003cff);
    color: #fff;
}
.button.clear:hover {
    background-image: none;
    background-color: #2794ec;
}

.button.plus-btn {
    grid-row: span 2; 
}

.button.equal {
    background-image: linear-gradient(to bottom, #1083e0, #003bfd);
    border-radius: 20px;
    grid-column: span 2;
    color: #fff;
}
.button.equal:hover {
    background-image: none;
    background-color: #2794ec;
}

.button.operator, .backspace {
    background-image: linear-gradient(to bottom, rgba(39, 147, 236, 0.75), #4971a5);    
    color: #fff;
}
.button.operator:hover {
    background-image: none;
    background-color: #4971a5;
}

footer {
    background-color: rgba(31, 41, 55, 0.9);
    color: #fff;
    text-align: center;
    font-size: 15px;
    font-style: normal;
    padding: 20px;
    margin-top: auto;
}

/* ----------------------------Dark / Light Switch ---------------------- */

.dark-mode {
    background-color: #333333e1;
    color: #fff;
  }
  
  .dark-mode .calculator {
    background-color: #222222d8;
    border-top: 3px ridge #d2d1d3e1;
    border-left: 3px ridge #d2d1d3e1;
    border-right: 3px groove #000000de;
    border-bottom: 3px groove #000000de;
    box-shadow: none;
  }
  
  .dark-mode .display {
    border-top: 3px ridge #d2d1d3e1;
    border-left: 3px ridge #d2d1d3e1;
    border-right: 3px groove #000000de;
    border-bottom: 3px groove #000000de;
  }
  
  .dark-mode .button {
    background-color: #2a2941;
    border-top: 2px ridge #d2d1d3e1;
    border-left: 2px ridge #d2d1d3e1;
    border-right: 3px groove #000000de;
    border-bottom: 3px groove #000000de;
    color: #fff;
  }

  .dark-mode .button:hover {
    background-color: #47456dcc;
  }
  
  .dark-mode .operator {
    background-image: none;
    background-color: #301b69;
    color: #fff;
  }
  
  .dark-mode .clear {
    background-image: none;
    background-color: #4f28ff;
    color: #fff;
  }

  .dark-mode .clear:hover {
    background-color: #4f28ffc7;
  }  
  .dark-mode .backspace {
    background-image: none;
    background-color: #301b69;
    color: #fff;
  }
  
  .dark-mode .equal {
    background-image: none;
    background-color: #4f28ff;
    color: #fff;
  }
  .dark-mode .equal:hover {
    background-color: #4f28ffc7;
  }

